style kegs and fix margin layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
+*{
+	margin:0;
+}
 body{
   color:white;
 }
@@ -6,8 +8,4 @@ body{
 a{
   text-decoration:none;
   color:white; 
-}
-
-p{
-  margin:0;
 }
